--- a/.github/workflows/openbsd.yml
+++ b/.github/workflows/openbsd.yml
@@ -6,11 +6,11 @@ env:
 
 on:
   # To run manually workflow
-  workflow_dispatch
-  pull_request:
-  push:
-    branches:
-      - main
+  workflow_dispatch:
+  # pull_request:
+  # push:
+  #   branches:
+  #     - main
 
 permissions:
   contents: read # to fetch code (actions/checkout)
