OpenBSD workflow: test to get latest release URL for cargo-nextest in VM
Signed-off-by: Laurent Cheylus <foxy@free.fr>

--- a/.github/workflows/openbsd.yml
+++ b/.github/workflows/openbsd.yml
@@ -134,18 +134,24 @@ jobs:
     - uses: Swatinem/rust-cache@v2
     - name: Run sccache-cache
       uses: mozilla-actions/sccache-action@v0.0.3
+    - name: Get URL for cargo-nextest latest release
+      run: |
+        sudo apt-get install -y curl
+        LATEST_NEXTEST_URL=$(curl -sLf https://api.github.com/repos/lcheylus/cargo-nextest-openbsd/releases/latest | grep 'download_url' | cut -d\" -f4)
+        echo "LATEST_NEXTEST_URL=${LATEST_NEXTEST_URL}"
+        echo "LATEST_NEXTEST_URL=${LATEST_NEXTEST_URL}" >> $GITHUB_ENV
     - name: Prepare, build and test
       uses: vmactions/openbsd-vm@v1.0.6
       with:
+        envs: 'LATEST_NEXTEST_URL'
         usesh: true
         sync: rsync
         copyback: false
         # We need jq to run show-utils.sh and bash to use inline shell string replacement
         # install rust-1.72.1, rust-rustfmt-1.72.1 and rust-clippy-1.72.1 from OpenBSD 7.4 release
-        # to build cargo-nextest, install archivers/zstd and security/rust-ring packages
         prepare: |
           pkg_add -I coreutils curl gmake sudo-1.9.14.2 jq bash
-          pkg_add -I rust rust-rustfmt rust-clippy zstd rust-ring
+        #   pkg_add -I rust rust-rustfmt rust-clippy zstd
         run: |
           ## Prepare, build, and test
           # implementation modelled after ref: <https://github.com/rust-lang/rustup/pull/2783>
@@ -168,31 +174,31 @@ jobs:
           #
           # Further work needs to be done in a sudo as we are changing users
           sudo -i -u ${TEST_USER} sh << EOF
-          set -e
-          whoami
-          # Increase the number of file descriptors - See https://github.com/rust-lang/cargo/issues/11435
-          ulimit -n 1024
-          # Install nextest latest version from lcheylus/cargo-nextest-openbsd GH repository
-          mkdir -p ~/.cargo/bin
-          LATEST_NEXTEST_URL=$(curl -s https://api.github.com/repos/lcheylus/cargo-nextest-openbsd/releases/latest | grep 'download_url' | cut -d\" -f4)
-          echo "Latest cargo-nextest version for OpenBSD - URL archive = '${LATEST_NEXTEST_URL}'"
-          curl -LsSf  ${LATEST_NEXTEST_URL} | tar zxf - -C ~/.cargo/bin
-          ## Info
-          # environment
-          echo "## environment"
-          echo "CI='${CI}'"
-          echo "REPO_NAME='${REPO_NAME}'"
-          echo "TEST_USER='${TEST_USER}'"
-          echo "WORKSPACE_PARENT='${WORKSPACE_PARENT}'"
-          echo "WORKSPACE='${WORKSPACE}'"
-          env | sort
-          # tooling info
-          echo "## tooling info"
-          rustc -V
-          cargo -V
-          cargo nextest --version
-          #
-          # To ensure that files are cleaned up, we don't want to exit on error
+          echo "LATEST_NEXTEST_URL=${LATEST_NEXTEST_URL}"
+          # set -e
+          # whoami
+          # # Increase the number of file descriptors - See https://github.com/rust-lang/cargo/issues/11435
+          # ulimit -n 1024
+          # # Install nextest latest version from lcheylus/cargo-nextest-openbsd GH repository
+          # mkdir -p ~/.cargo/bin
+          # LATEST_NEXTEST_URL=$(curl -sLf https://api.github.com/repos/lcheylus/cargo-nextest-openbsd/releases/latest | grep 'download_url' | cut -d\" -f4)
+          # echo "Latest cargo-nextest version for OpenBSD - URL archive = '${LATEST_NEXTEST_URL}'"
+          # curl -LsSf  ${LATEST_NEXTEST_URL} | tar zxf - -C ~/.cargo/bin
+          # ## Info
+          # # environment
+          # echo "## environment"
+          # echo "CI='${CI}'"
+          # echo "REPO_NAME='${REPO_NAME}'"
+          # echo "TEST_USER='${TEST_USER}'"
+          # echo "WORKSPACE_PARENT='${WORKSPACE_PARENT}'"
+          # echo "WORKSPACE='${WORKSPACE}'"
+          # env | sort
+          # # tooling info
+          # echo "## tooling info"
+          # rustc -V
+          # cargo -V
+          # cargo nextest --version
+          # # To ensure that files are cleaned up, we don't want to exit on error
           # set +e
           # cd "${WORKSPACE}"
           # unset FAULT
