--- a/.github/workflows/openbsd.yml
+++ b/.github/workflows/openbsd.yml
@@ -118,22 +118,14 @@ jobs:
 
   test:
     name: Tests
-    runs-on: ${{ matrix.job.os }}
+    runs-on: ubuntu-latest
     timeout-minutes: 90
     strategy:
       fail-fast: false
-      matrix:
-        job:
-          - { os: ubuntu-22.04 , features: unix }
     env:
       mem: 4096
-      SCCACHE_GHA_ENABLED: "true"
-      RUSTC_WRAPPER: "sccache"
     steps:
     - uses: actions/checkout@v4
-    - uses: Swatinem/rust-cache@v2
-    - name: Run sccache-cache
-      uses: mozilla-actions/sccache-action@v0.0.3
     - name: Get URL for cargo-nextest latest release
       run: |
         sudo apt-get install -y curl
@@ -201,16 +193,16 @@ jobs:
           cargo nextest --version
 
           # To ensure that files are cleaned up, we don't want to exit on error
-          set +e
-          cd "${WORKSPACE}"
-          unset FAULT
-          cargo build || FAULT=1
-          export PATH=~/.cargo/bin:${PATH}
-          export RUST_BACKTRACE=1
-          export CARGO_TERM_COLOR=always
-          if (test -z "\$FAULT"); then cargo nextest run --hide-progress-bar --profile ci --features '${{ matrix.job.features }}' || FAULT=1 ; fi
-          if (test -z "\$FAULT"); then cargo nextest run --hide-progress-bar --profile ci --all-features -p uucore || FAULT=1 ; fi
-          # Clean to avoid to rsync back the files
-          cargo clean
-          if (test -n "\$FAULT"); then exit 1 ; fi
+          # set +e
+          # cd "${WORKSPACE}"
+          # unset FAULT
+          # cargo build || FAULT=1
+          # export PATH=~/.cargo/bin:${PATH}
+          # export RUST_BACKTRACE=1
+          # export CARGO_TERM_COLOR=always
+          # if (test -z "\$FAULT"); then cargo nextest run --hide-progress-bar --profile ci --features '${{ matrix.job.features }}' || FAULT=1 ; fi
+          # if (test -z "\$FAULT"); then cargo nextest run --hide-progress-bar --profile ci --all-features -p uucore || FAULT=1 ; fi
+          # # Clean to avoid to rsync back the files
+          # cargo clean
+          # if (test -n "\$FAULT"); then exit 1 ; fi
           EOF
