OpenBSD workflow: exec Tests job in a separate script shell

--- a/.github/workflows/openbsd.yml
+++ b/.github/workflows/openbsd.yml
@@ -144,65 +144,4 @@ jobs:
         prepare: |
           pkg_add -I coreutils curl gmake sudo-1.9.14.2 jq bash
           pkg_add -I rust rust-rustfmt rust-clippy zstd
-        run: |
-          ## Prepare, build, and test
-          # implementation modelled after ref: <https://github.com/rust-lang/rustup/pull/2783>
-          # * NOTE: All steps need to be run in this block, otherwise, we are operating back on the mac host
-          set -e
-          #
-          # We need a file-descriptor file system to test test_ls::test_ls_io_errors
-          # mount -t fdescfs fdesc /dev/fd
-          #
-          TEST_USER=tester
-          REPO_NAME=${GITHUB_WORKSPACE##*/}
-          WORKSPACE_PARENT="/home/runner/work/${REPO_NAME}"
-          WORKSPACE="${WORKSPACE_PARENT}/${REPO_NAME}"
-          # Generate random password for user
-          PASSWD=$(encrypt $(openssl rand -base64 12))
-          # Create user for build
-          useradd -d /root/ -g wheel -c "Coreutils user to build" -p ${PASSWD} ${TEST_USER}
-          chown -R ${TEST_USER}:wheel /root/ "${WORKSPACE_PARENT}"/
-          whoami
-          #
-          # Further work needs to be done in a sudo as we are changing users
-          sudo -i -u ${TEST_USER} sh << EOF
-          set -e
-          whoami
-          # Increase the number of file descriptors - See https://github.com/rust-lang/cargo/issues/11435
-          ulimit -n 1024
-          # Install nextest latest version from lcheylus/cargo-nextest-openbsd GH repository
-          mkdir -p ~/.cargo/bin
-          echo "Latest cargo-nextest version for OpenBSD - URL archive = '${LATEST_NEXTEST_URL}'"
-          curl -LsSf  ${LATEST_NEXTEST_URL} | tar zxf - -C ~/.cargo/bin
-          ls -l ~/.cargo/bin
-
-          ## Info
-          # environment
-          echo "## environment"
-          echo "CI='${CI}'"
-          echo "REPO_NAME='${REPO_NAME}'"
-          echo "TEST_USER='${TEST_USER}'"
-          echo "WORKSPACE_PARENT='${WORKSPACE_PARENT}'"
-          echo "WORKSPACE='${WORKSPACE}'"
-          env | sort
-
-          # tooling info
-          printf "\n## tooling info\n"
-          rustc -V
-          cargo -V
-          cargo nextest --version
-
-          # To ensure that files are cleaned up, we don't want to exit on error
-          # set +e
-          # cd "${WORKSPACE}"
-          # unset FAULT
-          # cargo build || FAULT=1
-          # export PATH=~/.cargo/bin:${PATH}
-          # export RUST_BACKTRACE=1
-          # export CARGO_TERM_COLOR=always
-          # if (test -z "\$FAULT"); then cargo nextest run --hide-progress-bar --profile ci --features '${{ matrix.job.features }}' || FAULT=1 ; fi
-          # if (test -z "\$FAULT"); then cargo nextest run --hide-progress-bar --profile ci --all-features -p uucore || FAULT=1 ; fi
-          # # Clean to avoid to rsync back the files
-          # cargo clean
-          # if (test -n "\$FAULT"); then exit 1 ; fi
-          EOF
+        run: bash ci/openbsd_tests.sh
