OpenBSD build: fix home directory fox user tester

--- a/.github/workflows/openbsd.yml
+++ b/.github/workflows/openbsd.yml
@@ -126,12 +126,6 @@ jobs:
       mem: 4096
     steps:
     - uses: actions/checkout@v4
-    # - name: Get URL for cargo-nextest latest release
-    #   run: |
-    #     sudo apt-get install -y curl
-    #     LATEST_NEXTEST_URL=$(curl -sLf https://api.github.com/repos/lcheylus/cargo-nextest-openbsd/releases/latest | grep 'download_url' | cut -d\" -f4)
-    #     echo "LATEST_NEXTEST_URL=${LATEST_NEXTEST_URL}"
-    #     echo "LATEST_NEXTEST_URL=${LATEST_NEXTEST_URL}" >> $GITHUB_ENV
     - name: Prepare, build and test
       uses: vmactions/openbsd-vm@v1.0.6
       with:
@@ -163,7 +157,7 @@ jobs:
           whoami
 
           echo "## create non-root user and log into it"
-          useradd -d "${WORKSPACE}" -g wheel -c "Coreutils user for tests" -s $(which bash) -p ${PASSWD} tester
+          useradd -d "/root" -g wheel -c "Coreutils user for tests" -s $(which bash) -p ${PASSWD} tester
           chown -R tester:wheel /root/ "${WORKSPACE_PARENT}"/
 
           # Further work needs to be done in a sudo as we are changing user
