OpenBSD workflow: add step to generate report for tests
Signed-off-by: Laurent Cheylus <foxy@free.fr>

--- a/.github/workflows/openbsd.yml
+++ b/.github/workflows/openbsd.yml
@@ -110,3 +110,9 @@ jobs:
 
           # Further work needs to be done in a sudo as we are changing user
           sudo -E -u tester bash ci/openbsd_tests.sh
+
+    - name: Generate Markdown report for tests results
+      run: |
+        sudo apt-get install -y jq
+        ci/get_tests_results.sh tests-unix.json unix >> $GITHUB_STEP_SUMMARY
+        ci/get_tests_results.sh tests-uucore.json uucore >> $GITHUB_STEP_SUMMARY
