OpenBSD workflow: enable copyback in tests job to copy results files
Signed-off-by: Laurent Cheylus <foxy@free.fr>

--- a/.github/workflows/openbsd.yml
+++ b/.github/workflows/openbsd.yml
@@ -81,7 +81,7 @@ jobs:
         envs: "STYLE_FAIL_ON_FAULT FEATURES"
         usesh: true
         sync: rsync
-        copyback: false
+        copyback: true
         # install rust (version 1.72.1) from OpenBSD 7.4 release
         prepare: |
           pkg_add -I coreutils curl sudo-1.9.14.2 bash
