OpeNBSD workflow: improve check for tests result at the end of the job

--- a/.github/workflows/openbsd.yml
+++ b/.github/workflows/openbsd.yml
@@ -115,11 +115,10 @@ jobs:
           chown -R root:wheel /root/ "${WORKSPACE_PARENT}"/
 
           # Check tests results
-          if [ -f ${WORKSPACE}/tests-status ] && [ -s ${WORKSPACE}/tests-status ] && [ $(cat ${WORKSPACE}/tests-status) -eq 0 ]; then
-              rm ${WORKSPACE}/tests-status
+          if [ -f ${WORKSPACE}/tests-ok ]; then
+              rm ${WORKSPACE}/tests-ok
               exit 0
           else
-              rm ${WORKSPACE}/tests-status
               exit 1
           fi
 
